--- a/final/styles/styles.css
+++ b/final/styles/styles.css
@@ -24,14 +24,30 @@ body {
 
 /* ---------- HEADER & NAV ---------- */
 header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 1rem;
     background-color: var(--primary);
     color: white;
-    padding: 1rem;
 }
 
 header a img {
     vertical-align: middle;
     margin-right: 1rem;
+}
+
+#menu-btn {
+    font-size: 1.5rem;
+    background: none;
+    border: none;
+    color: white;
+    cursor: pointer;
+}
+
+/* Hides nav menu */
+nav.hidden {
+    display: none;
 }
 
 header h1 {
@@ -73,15 +89,16 @@ footer {
 
 /* ---------- MEDIA QUERIES ---------- */
 @media (min-width: 768px) {
+    #menu-btn {
+        display: none;
+    }
+
+    nav {
+        display: block !important;
+    }
+
     nav ul {
         flex-direction: row;
         justify-content: flex-end;
-        gap: 2rem;
-    }
-
-    header {
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
     }
 }
